# http-metadata-inventory

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  middleware.py
app/api/v1/: health.py  metadata.py  router.py
app/core/: config.py  logging.py  request_context.py
app/db/: mongo.py
app/models/: schemas.py
app/services/: fetcher.py  metadata_service.py  rate_limiter.py  url_security.py  url_utils.py
app/storage/: metadata.py
app/workers/: background.py
docker/: Dockerfile
tests/: conftest.py
tests/integration/: test_metadata_api.py
tests/unit/: test_fetcher.py  test_lifespan_resume.py  test_metadata_service.py  test_rate_limiter.py  test_repository.py  test_url_security.py  test_url_utils.py  test_worker.py
